aneeshbhat1-Salesforce/src/objects/All_Functions__c.object
<CustomObject>
    <fields>
        <fullName>Concatenate__c</fullName>
        <formula>CreatedBy.CompanyName  &amp;  $User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUM__c</fullName>
        <formula>Value1__c  +  Value2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>All Functions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>All Functions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>